# OrionEngine

./: .gitignore  .gitmodules  OrionEngine.slnx  README.md
OrionEngine/: CMakeLists.txt  GenerateProjects.bat  OrionEngine.slnx  OrionEngine.vcxproj
OrionEngine/editor/: Editor.vcxproj  Editor.vcxproj.filters  imgui.ini
OrionEngine/editor/src/: main.cpp
OrionEngine/editor/x64/Debug/: Editor.exe.recipe  Editor.ilk  vc145.idb
OrionEngine/editor/x64/Debug/Editor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Editor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
OrionEngine/engine/: Engine.vcxproj  Engine.vcxproj.filters
OrionEngine/engine/engineAssets/scenes/: default.scene
OrionEngine/engine/engineAssets/shaders/: Lit.frag  Lit.vert  Shadow.frag  Shadow.vert
OrionEngine/engine/include/: APPLICATION.H  AppWindow.h  EngineCore.h  Orion.h  Window.h
OrionEngine/engine/include/Apollo/: Apollo.h
OrionEngine/engine/include/Asset/: AssetLoader.h  AssetManager.h  AssetRegistry.h
OrionEngine/engine/include/Core/: Config.h  Console.h  Core.h  Profiler.h  Time.h
OrionEngine/engine/include/ECS/: Component.h  ECS.h  ECSSystem.h  Entity.h  Registry.h
OrionEngine/engine/include/Events/: Application.h  ApplicationEvent.h  Event.h  KeyEvent.h  Keyboard.h  MouseEvent.h
OrionEngine/engine/include/Input/: Input.h  Mouse.h
OrionEngine/engine/include/Layers/: Layer.h  LayerStack.h
OrionEngine/engine/include/Log/: Log.h
OrionEngine/engine/include/Physics/: Collider.h  PhysicsSystem.h  Rigidbody.h
OrionEngine/engine/include/Renderer/: Buffer.h  Camera.h  CameraData.h  DebugRenderSettings.h  FrameContext.h  Handles.h  IRenderbackend.h  LightData.h  Material.h  MaterialAsset.h  Mesh.h  OpenGLBackend.h  RenderPass.h  RenderScene.h  RenderSettings.h  RenderStats.h  RenderTarget.h  Renderable.h  Renderer.h  ResourceDescs.h  Texture.h
OrionEngine/engine/include/Scene/: SceneManager.h
OrionEngine/engine/include/assets/: AssetManager.h  AssetTypes.h
OrionEngine/engine/include/ecs/: Component.h  ComponentPool.h  Entity.h  Entity.hpp  Scene.h
OrionEngine/engine/include/renderer/: BoundingSphere.hpp  Camera.hpp  DirectionalLight.hpp  DrawCommand.hpp  EditorCamera.hpp  EditorCameraInput.hpp  Framebuffer.hpp  Frustum.hpp  IRenderBackend.hpp  IndexBuffer.hpp  Material.hpp  MaterialRenderState.hpp  Mesh.hpp  OBJLoader.hpp  OpenGLBackend.hpp  RenderPass.hpp  RenderScene.hpp  Renderable.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp
OrionEngine/engine/shaders/: vertex.glsl
OrionEngine/engine/src/: AppWindow.cpp  Application.cpp
OrionEngine/engine/src/Core/: Console.cpp
OrionEngine/engine/src/ECS/: ECS.cpp
OrionEngine/engine/src/Layers/: Layer.cpp  LayerStack.cpp
OrionEngine/engine/src/Log/: Log.cpp
OrionEngine/engine/src/Renderer/: Mesh.cpp  Renderer.cpp  glad.c
OrionEngine/engine/src/assets/: AssetManager.cpp
OrionEngine/engine/src/renderer/: Camera.cpp  EditorCamera.cpp  EditorCameraInput.cpp  Framebuffer.cpp  Frustum.cpp  IndexBuffer.cpp  Material.cpp  OBJLoader.cpp  OpenGLBackend.cpp  RenderPass.cpp  RenderScene.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
OrionEngine/engine/x64/Debug/: Engine.dll.recipe  Engine.ilk  vc145.idb
OrionEngine/engine/x64/Debug/Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
OrionEngine/x64/Debug/: Engine.idb  Engine.lib  imgui.ini
docs/: RendererFacade.drawio
